--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </header>
         <div class="content">
             <h1>LYTE</h1>
+            <h2>| Just another school website</h2>
         </div>
     </body>
 </html>
