--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./home.css">
     </head>
     <body>
         <header class="header">
@@ -17,6 +17,7 @@
         <div class="content">
             <h1>LYTE</h1>
             <h2>| Just another school website</h2>
+            <div class="wired">lol</div>
         </div>
     </body>
 </html>
