--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </header>
         <div class="content">
             <h1>LYTE</h1>
-            <h2>| Just another school website</h2>
-            <div class="wired">lol</div>
+            <h2>Housing School Entertainment</h2>
+            <img src="./img/New o.png" alt="Preview Image">
         </div>
     </body>
 </html>
