--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <link rel="stylesheet" href="./home.css">
-    </head>
-    <body>
-        <header class="header">
-            <h1 class="logo"><a href="#">LYTE</a></h1>
-          <ul class="main-nav">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Gaming</a></li>
-              <li><a href="#">Surfing</a></li>
-              <li><a href="#">Resources</a></li>
-              <li><a href="#">Help</a></li>
-          </ul>
-        </header>
-        <div class="content">
-            <h1>LYTE</h1>
-            <h2>Housing School Entertainment</h2>
-            <img src="./img/New o.png" alt="Preview Image">
+<head>
+    <link rel="stylesheet" href="./home.css">
+</head>
+<body>
+    <header class="header">
+        <h1 class="logo"><a href="#">LYTE</a></h1>
+        <ul class="main-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Gaming</a></li>
+            <li><a href="#">Surfing</a></li>
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Help</a></li>
+        </ul>
+    </header>
+    <div class="content">
+        <div class="container">
+            <div class="text">
+                <h1>LYTE</h1>
+                <h4>Housing School Entertainment</h4>
+            </div>
+            <div class="img-container">
+                <img src="./img/New o.png" alt="Preview Image">
+            </div>
         </div>
-    </body>
+        <div class="button-container">
+            <button class="button">Button 1</button>
+            <button class="button">Button 2</button>
+            <button class="button">Button 3</button>
+        </div>
+    </div>
+</body>
 </html>
