--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </div>
         </div>
         <div class="button-container">
-            <button class="button">Button 1</button>
-            <button class="button">Button 2</button>
-            <button class="button">Button 3</button>
+            <button>Button 1</button>
+            <button>Button 2</button>
+            <button>Button 3</button>
         </div>
     </div>
 </body>
